# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/beer": {
+        "/api/v1/beer": {
             "get": {
                 "tags": [
                     "beer"
@@ -128,15 +128,24 @@
                     "type": "integer",
                     "default": 0
                 },
+                "detail": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
                     "type": "string"
                 },
+                "picture": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "integer",
                     "default": 0
+                },
+                "type": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
